fix css button, align error msg on faq-edit and create

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -750,15 +750,6 @@ footer a {
 .faq-table {
     margin: 15px auto;
     text-align: center;
-    box-shadow: black 0 15px 15px -5px;
-
-    input, textarea, select {
-        margin-bottom: 15px;
-    }
-
-    textarea {
-        height: 200px;
-    }
 
     .faq-index-btn {
         margin: 3px;
@@ -775,6 +766,23 @@ footer a {
 
     .btn-round-clearblue:hover {
         color: $dark-blue;
+    }
+}
+
+.faq-table-shadow {
+    box-shadow: black 0 15px 15px -5px;
+}
+
+.faq-form {
+    margin: 15px auto;
+    text-align: center;
+
+    input, textarea, select {
+        margin-top: 15px;
+    }
+
+    textarea {
+        height: 200px;
     }
 }
 
